--- a/ecommers.html
+++ b/ecommers.html
@@ -11,8 +11,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
-    <link rel="stylesheet" href="search1.css">
-    <script src="search.js"></script>
+    <link rel="stylesheet" href="ecommerce.css">
+    <script src="ecommerce.js"></script>
 </head>
 
 <body ng-app="search">
