--- a/ecommerce.html
+++ b/ecommerce.html
@@ -32,11 +32,11 @@
                                         <span> <i class="bi bi-search" style="color: white;"></i></span>
                                     </button>
                                 </li>
-                                <li class="items"><a href="#" ng-click="appliances()">TV</a></li>
-                                <li class="items"><a href="#" ng-click="headsets()">HEADSET</a></li>
-                                <li class="items"><a href="#" ng-click="laptop()">LAPTOPS</a></li>
+                                <li class="items"><a href="#" ng-click="appliances()">Tv</a></li>
+                                <li class="items"><a href="#" ng-click="headsets()">Headset</a></li>
+                                <li class="items"><a href="#" ng-click="laptop()">Laptops</a></li>
                                 <li class="items"><a href="#" ng-click="openContact()"><i
-                                            class="bi bi-person-lines-fill"></i> contact</a></li>
+                                            class="bi bi-person-lines-fill"></i> Contact</a></li>
                                 <li class="items" style="color: white;"><a href="#"><i type="button"
                                             ng-click="openCartItems()" class="fa-solid  fa-cart-arrow-down"></i><span
                                             class="count" ng-init="Items=0">{{Items}}</span> Cart</a>
@@ -82,6 +82,9 @@
                             <h6>{{cart.price}}</h6>
                         </div>
                     </div>
+                </div>
+                <div class="message" ng-hide="foundList.length">
+                    Cart is empty!
                 </div>
                 <button style="margin-left: 25px;margin-bottom: 15px;" class=" btn btn-danger "
                     ng-click="openContact()">Proceed</button>
