--- a/ecommerce.html
+++ b/ecommerce.html
@@ -83,7 +83,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="message" ng-hide="foundList.length">
+                <div class="message" ng-hide="foundList.length" style=" text-align: center;">
                     Cart is empty!
                 </div>
                 <button style="margin-left: 25px;margin-bottom: 15px;" class=" btn btn-danger "
